# autograde

./: README.md  exam.schema.json  pyproject.toml
.github/workflows/: ci.yml
authoring/: index.html
autograde/: __init__.py  authoring.py  cli.py  diagnostics.py  grading.py  rendering.py  schema.py
examples/: exam_math_v1.json  responses_math_v1.json
tests/: test_autograde.py
