[project]
name = "autograde"
version = "0.1.0"
description = "Automated exam generation and grading platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
autograde = "autograde.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
